[gd_scene load_steps=4 format=3 uid="uid://d0iwdephxr1u4"]

[ext_resource type="Script" path="res://HTTP Request/Scripts/HTTPRequest.gd" id="1_82cp4"]
[ext_resource type="Theme" uid="uid://bfhdii4q4yvvb" path="res://Themes/buttons_and_checkboxes.tres" id="2_2dcl1"]
[ext_resource type="Theme" uid="uid://b33dropps4vm8" path="res://Themes/main_menu_theme.tres" id="3_qm10g"]

[node name="SendToDiscord" type="Node2D"]
position = Vector2(100, 20)

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource("1_82cp4")

[node name="PushToDiscord" type="Button" parent="HTTPRequest"]
offset_right = 200.0
offset_bottom = 50.0
theme = ExtResource("2_2dcl1")
text = "Send to Discord"
metadata/_edit_lock_ = true

[node name="Pass_Fail" type="Label" parent="HTTPRequest"]
visible = false
offset_top = 60.0
offset_right = 200.0
offset_bottom = 100.0
pivot_offset = Vector2(100, 20)
theme = ExtResource("3_qm10g")
theme_override_font_sizes/font_size = 18
text = "Success!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[connection signal="request_completed" from="HTTPRequest" to="HTTPRequest" method="_on_request_completed"]
[connection signal="pressed" from="HTTPRequest/PushToDiscord" to="HTTPRequest" method="_on_push_to_discord_pressed"]
